@@ -123,7 +123,7 @@ FileSystem_getFileInfo(char* filename, uint32_t* fileSize, uint64_t* lastModific
 {
     struct stat fileStats;
 
-    char fullPath[sizeof(CONFIG_VIRTUAL_FILESTORE_BASEPATH) + 255];
+    char fullPath[sizeof(CONFIG_VIRTUAL_FILESTORE_BASEPATH) + 256];
 
     createFullPathFromFileName(fullPath, filename);
 
